--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="decoracion">💖🌸💕</div>
-    <h1>¿Quieres ser mi novia?</h1>
+    <h1>¿Quieres ser mi San Valentin?</h1>
     <button class="boton si" onclick="window.location.href='gracias.html'">Sí</button>
     <button class="boton no" id="no" onmouseover="moverBoton()">No</button>
     <div class="decoracion">💞🌷💘</div>
