--- a/gracias.html
+++ b/gracias.html
@@ -6,18 +6,37 @@
     <title>¡Gracias!</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Dancing Script', cursive;
             text-align: center;
             margin: 50px;
             background-color: #ffd1dc;
         }
         h1 {
-            color: #ff4d6d;
+            color: #b3003b;
+            font-size: 36px;
+        }
+        p {
+            font-size: 22px;
+            color: #b3003b;
+            margin: 20px auto;
+            width: 80%;
+        }
+        .decoracion {
+            font-size: 50px;
+            color: #b3003b;
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>¡Muchas gracias! 💖</h1>
-    <p>Me haces la persona más feliz del mundo. 😊</p>
+    <div class="decoracion">💖🌸💕</div>
+    <h1>¡Muchas gracias, mi amor! 💖</h1>
+    <p>Desde que entraste en mi vida, todo es más hermoso y especial. 🌹💑
+       Me haces sentir el hombre más afortunado del mundo, cada día contigo es un regalo, 
+       y tu sonrisa ilumina mi camino. 🥰✨
+       No hay palabras suficientes para describir lo mucho que te amo y lo feliz que soy a tu lado. 💕😍
+       Eres mi razón de ser, mi amor eterno y mi mayor alegría. ¡Gracias por existir y por hacerme tan feliz! 💘🥹</p>
+    <p>🎉 ¡Te has ganado una cena romántica y un delicioso postre preparado especialmente para ti! 🍽🍰💕</p>
+    <div class="decoracion">💞🌷💘</div>
 </body>
 </html>
