--- a/gracias.html
+++ b/gracias.html
@@ -31,7 +31,7 @@
 <body>
     <div class="decoracion">💖🌸💕</div>
     <h1>¡Muchas gracias, mi amor! 💖</h1>
-    <p>Desde que entraste en mi vida, todo es más hermoso y especial. 🌹💑
+    <p>Desde que entraste en mi vida, todo es más hermoso y especial. 🌹
        Me haces sentir el hombre más afortunado del mundo, cada día contigo es un regalo, 
        y tu sonrisa ilumina mi camino. 🥰✨
        No hay palabras suficientes para describir lo mucho que te amo y lo feliz que soy a tu lado. 💕😍
