--- a/gracias.html
+++ b/gracias.html
@@ -12,7 +12,7 @@
             background-color: #ffd1dc;
         }
         h1 {
-            color: #b3003b;
+            color: #8b0000;
             font-size: 36px;
         }
         p {
